fixing the overflow in the buttons

--- a/src/Contracts.css
+++ b/src/Contracts.css
@@ -1,11 +1,7 @@
 body{
   background-color: rgba(226, 226, 226, 0.975);
 }
-.background {
-  background-color: darkgreen;
-  width: 100%;
-  height: 150px;  
-}
+
 .container {
   background-color: rgb(250, 250, 250);
   height: 90vh;
@@ -87,100 +83,122 @@ body{
   left: 12px;
   top: 10px;
   font-size: 1.2em;
+  cursor:auto;
+  pointer-events: none;
+
 }
+
 .bi-person-plus {
+  display:inline;
   position: absolute;
   right: 16px;
   top: 22px;
   font-size: 1.5em;
   border: 0px;
+  margin: 0;
+  outline: none;
+}
+
+.bbbbbbbbb {
+  text-decoration: none;
 }
 
 .list-group {
-  position:relative;
+  background-color: white;
+  position: relative;
+  overflow: scroll;
   height: 100%;
-  overflow-y: auto !important;
-  overflow-x: hidden !important;
-  margin-left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.list-group-item  {
-  position:relative;
-  height: 15%;
-  overflow: hidden;
-  padding-left: 3px;
-  cursor: pointer;
+.list-group :hover {
+  background-color: #f6f6f6;
 }
+
+.list-group .block {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0,0.06);
+  cursor: pointer;
+  
+}
+
+.list-group .block .img {
+  position: relative;
+  min-width: 45px;
+  height: 45px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.list-group .block .details {
+   position: relative;
+   width: 100%;
+}
+
+.list-group .block .details .Head{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+
+}
+
+.list-group .block .details .Head h4{
+  font-size: 1.1em;
+  font-weight: 600;
+  color: #111;
+  text-decoration: none;
+}
+
+.list-group .block .details .Head .time {
+  font-size: 0.75em;
+  color: #aaa;
+  text-decoration: none;
+}
+.LastMassage {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+}
+
+.LastMassage p {
+  color: #aaa;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  font-size: 0.9em;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  
+}
+
+.LastMassage b {
+  background-color: #06d755;
+  color: #fff;
+  min-width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.75em;
+  text-decoration: none;
+}
+
+
 
 .list-group-item-action:hover {
   z-index: 1 !important;
   color: #495057 !important;
   text-decoration: none !important;
-  background-color: #f8f9fa !important;
-}
-
-
-.list-group-item-action a {
-  position:relative;
-  height: 15%;
-  padding-left: 3px;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.ContractName {
-  position: relative;
-  left: 50px;
-  bottom: 80px;
-  font-size: larger;
-  color: black;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-
-.time {
-  position: relative;
-  bottom: 115px;
-  float: right;
-  font-size: 0.75em;
-  color: #aaa;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.list-group-item .img {
-  position: relative;
-  margin: 0%;
-  width: 100%;
-  height: 100%;
-  bottom: 32px;
-  object-fit: cover;
-  white-space: nowrap;
-}
-
-.LastMassage {
-  position: relative;
-  text-align: center;
-  bottom: 80px;
-  color: #aaa;
-  white-space: nowrap;
-}
-
-.Notification {
-  position: relative;
-  bottom: 100px;
-  background-color: rgb(34, 228, 34);
-  color: #fff;
-  float: right;
-  width: 20px;
-  height: 20px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  display: flex;
-  font-size: 0.75em;
-  white-space: nowrap;
+  background-color: #f4f4f4 !important;
 }
 
 .error {
